--- a/app.json
+++ b/app.json
@@ -9,8 +9,7 @@
     "navigationBarBackgroundColor": "#f9f9f9",
     "navigationBarTitleText": "冷月博客",
     "navigationBarTextStyle": "black",
-    "backgroundColor": "#f9f9f9",
-    "enablePullDownRefresh": true
+    "backgroundColor": "#f9f9f9"
   },
   "tabBar": {
     "color": "#959394",
@@ -28,20 +27,14 @@
         "pagePath": "pages/topic/topic",
         "iconPath": "images/tabbar/like.png",
         "selectedIconPath": "images/tabbar/like_click.png",
-        "text": "首页"
+        "text": "分类"
       }
-      
+
     ]
   },
   "networkTimeout": {
     "request": 10000,
     "downloadFile": 10000
   },
-  "debug": true,
-  "test":{
-        "pagePath": "pages/mine/mine",
-        "iconPath": "images/tabbar/about.png",
-        "selectedIconPath": "images/tabbar/about_click.png",
-        "text": "我的"
-      }
+  "debug": true
 }
